Fixed Index page 1. Advantages content is centered vertically 2. Removed margin between courses slider and advantages block 3. Fixed features block. Removed margins and paddings. 4. Fixed horizontal scrolling

--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -114,7 +114,7 @@
 
         <div class="advantages">
 
-            <div data-aos="fade-left" data-aos-duration="700" class="advantages__text">
+            <div data-aos="zoom-in" data-aos-duration="700" class="advantages__text">
                 <a name="advantages"></a>
                 <h3>Our advantages</h3>
                 <p>
@@ -127,7 +127,7 @@
                 </p>
             </div>
 
-            <div data-aos="zoom-out-up" data-aos-duration="700" class="advantages__image">
+            <div data-aos="zoom-in" data-aos-duration="700" class="advantages__image">
                 <img src="~/images/advantagesImage.jpg" />
             </div>
         </div>
@@ -135,7 +135,7 @@
         <div class="features">
             <a name="features"></a>
             <h3>Our features</h3>
-            <div data-aos="fade-right" data-aos-duration="700" class="features__list">
+            <div data-aos="zoom-in" data-aos-duration="700" class="features__list">
                 <ul>
                     <li>All courses are free</li>
                     <li>Convenient and intuitive interface</li>
@@ -206,7 +206,7 @@
 
     <footer>
         <div class="footer">
-            <div class="footer-links" data-aos="fade-left" data-aos-duration="700">
+            <div class="footer-links" data-aos="zoom-in" data-aos-duration="700">
                 <a href="#" class="footer-links_first">
                     <div class="footer-link__image">
                         <img src="~/images/facebookLogo.png" />
@@ -226,7 +226,7 @@
                 </a>
             </div>
 
-            <div class="footer__text" data-aos="fade-right" data-aos-duration="700">
+            <div class="footer__text" data-aos="zoom-in" data-aos-duration="700">
                 <h5>&#x24B8; 2021 Programmania. All rights reserved.</h5>
             </div>
         </div>
@@ -236,7 +236,7 @@
     <script type="application/javascript" src="~/js/util/slider.js"></script>
     <script type="application/javascript" src="~/js/util/openModal.js"></script>
     <script>
-  AOS.init();
-</script>
+        AOS.init();
+    </script>
 </body>
 </html>
