Fixed Main page 1. Fixed margins and paddings 2. Changed button styles 3. Added box shadows to cards 4. Changed slider view. Now 4 slides per view and infinite slider scroll. If you want, i'll remove infinite scroll. 5. Changed Performance title from header to link 6. Removed challenges diagram 7. Achievments and News is "on development" pages.

--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -40,39 +40,25 @@
 
 				<ul>
 					<li>
-						<a href="#curr-course">
-							Current Course
-						</a>
+						<a href="#curr-course">Current Course</a>
 					</li>
 					<li>
-						<a href="#courses">
-							All Courses
-						</a>
+						<a href="#courses">All Courses</a>
 					</li>
 					<li>
-						<a href="#level">
-							Level
-						</a>
+						<a href="#level">Level</a>
 					</li>
 					<li>
-						<a href="#performance">
-							Performance
-						</a>
+						<a href="#performance">Performance</a>
 					</li>
 					<li>
-						<a href="#challenges">
-							Challenges
-						</a>
+						<a href="#challenges">Challenges</a>
 					</li>
 					<li>
-						<a href="#achievments">
-							Achievments
-						</a>
+						<a href="#achievments">Achievments</a>
 					</li>
 					<li>
-						<a href="#news">
-							News
-						</a>
+						<a href="#news">News</a>
 					</li>
 				</ul>
 			</div>
@@ -310,7 +296,7 @@
 
 
 		<div class="performance-container" id="performance">
-			<h3 class="container__title">Performance</h3>
+			<a href="Performance" class="container__title title_link">Performance</a>
 			<div class="performance" data-aos="zoom-in" data-aos-duration="1000">
 				<div class="chartArea">
 					<div class="chart-container">
@@ -326,16 +312,8 @@
 		<div class="challenges-container" id="challenges">
 			<h3 class="container__title">Challenges</h3>
 			<div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
-				<div class="challenges-winrate">
-					<div class="winrate__percent">
-						<div class="ldBar label-center" data-preset="circle" data-value="77" data-transition-in="1000"
-							style="width: 100%; height: 100%">
-						</div>
-					</div>
 
-					<div class="winrate__info">Games win: 7/10</div>
-				</div>
-
+				<h3 class="winrate__info">Games win: 7/10</h3>
 				<div class="swiper">
 					<div class="challenges-swiper swiper-container">
 						<div class="swiper-wrapper">
@@ -367,8 +345,8 @@
 
 									</div>
 									<div class="challenge-content">
-										<div class="challenge__avatar" style="background-image: url('images/avatarImg.png')">
-
+										<div class="challenge__avatar">
+											<img src="images/avatarImg.png" alt="Avatar image" />
 										</div>
 
 										<h3 class="challenge__username">Jack Jackson</h3>
@@ -408,8 +386,8 @@
 
 									</div>
 									<div class="challenge-content">
-										<div class="challenge__avatar" style="background-image: url('images/avatarImg.png')">
-
+										<div class="challenge__avatar">
+											<img src="images/avatarImg.png" alt="Avatar image" />
 										</div>
 
 										<h3 class="challenge__username">Jack Jackson</h3>
@@ -449,8 +427,8 @@
 
 									</div>
 									<div class="challenge-content">
-										<div class="challenge__avatar" style="background-image: url('images/avatarImg.png')">
-
+										<div class="challenge__avatar">
+											<img src="images/avatarImg.png" alt="Avatar image" />
 										</div>
 
 										<h3 class="challenge__username">Jack Jackson</h3>
@@ -474,24 +452,7 @@
 
 		<div class="achievment-container" id="achievments">
 			<h3 class="container__title">Achievments</h3>
-			<div class="achievment">
-				<div class="achievment-col-1" data-aos="fade-right" data-aos-duration="1000">
-					<div class="achievment__image" style="background-image: url('images/achievment.png');">
-					</div>
-
-					<h3 class="achievment__name">Lion</h3>
-					<p class="achievment-percent__subtext">5 plays left</p>
-				</div>
-				<div class="achievment-col-2" data-aos="fade-left" data-aos-duration="1000">
-					<div class="achievment__percent">
-						<div class="ldBar label-center" data-preset="circle" data-value="77" data-transition-in="1000"
-							style="width: 100%; height: 100%">
-						</div>
-					</div>
-				</div>
-
-
-			</div>
+			<h3 class="dev-text">In development</h3>
 		</div>
 
 
@@ -499,121 +460,7 @@
 
 		<div class="news-container" id="news">
 			<div class="container__title">News</div>
-			<div class="swiper">
-				<div class="news swiper-container" data-aos="zoom-in" data-aos-duration="1000">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="news-el">
-								<div class="news-el-header">
-									<div class="news-el-header__avatar">
-										<img src="images/avatarImg.png" alt="Avatar image">
-									</div>
-									<h3 class="news-el-header__text">John Johnson</h3>
-								</div>
-								<p class="news__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem in iste,
-									autem neque provident sapiente placeat dolores deleniti. Quam odio, maxime vitae dolor
-									voluptate voluptatum blanditiis error incidunt velit illum?</p>
-								<p class="news__date">05.10.2021</p>
-								<a href="#">
-									<div class="news__button">Details</div>
-								</a>
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="news-el">
-								<div class="news-el-header">
-									<div class="news-el-header__avatar">
-										<img src="images/avatarImg.png" alt="Avatar image">
-									</div>
-									<h3 class="news-el-header__text">John Johnson</h3>
-								</div>
-								<p class="news__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem in iste,
-									autem neque provident sapiente placeat dolores deleniti. Quam odio, maxime vitae dolor
-									voluptate voluptatum blanditiis error incidunt velit illum?</p>
-								<p class="news__date">05.10.2021</p>
-								<a href="#">
-									<div class="news__button">Details</div>
-								</a>
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="news-el">
-								<div class="news-el-header">
-									<div class="news-el-header__avatar">
-										<img src="images/avatarImg.png" alt="Avatar image">
-									</div>
-									<h3 class="news-el-header__text">John Johnson</h3>
-								</div>
-								<p class="news__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem in iste,
-									autem neque provident sapiente placeat dolores deleniti. Quam odio, maxime vitae dolor
-									voluptate voluptatum blanditiis error incidunt velit illum?</p>
-								<p class="news__date">05.10.2021</p>
-								<a href="#">
-									<div class="news__button">Details</div>
-								</a>
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="news-el">
-								<div class="news-el-header">
-									<div class="news-el-header__avatar">
-										<img src="images/avatarImg.png" alt="Avatar image">
-									</div>
-									<h3 class="news-el-header__text">John Johnson</h3>
-								</div>
-								<p class="news__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem in iste,
-									autem neque provident sapiente placeat dolores deleniti. Quam odio, maxime vitae dolor
-									voluptate voluptatum blanditiis error incidunt velit illum?</p>
-								<p class="news__date">05.10.2021</p>
-								<a href="#">
-									<div class="news__button">Details</div>
-								</a>
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="news-el">
-								<div class="news-el-header">
-									<div class="news-el-header__avatar">
-										<img src="images/avatarImg.png" alt="Avatar image">
-									</div>
-									<h3 class="news-el-header__text">John Johnson</h3>
-								</div>
-								<p class="news__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem in iste,
-									autem neque provident sapiente placeat dolores deleniti. Quam odio, maxime vitae dolor
-									voluptate voluptatum blanditiis error incidunt velit illum?</p>
-								<p class="news__date">05.10.2021</p>
-								<a href="#">
-									<div class="news__button">Details</div>
-								</a>
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="news-el">
-								<div class="news-el-header">
-									<div class="news-el-header__avatar">
-										<img src="images/avatarImg.png" alt="Avatar image">
-									</div>
-									<h3 class="news-el-header__text">John Johnson</h3>
-								</div>
-								<p class="news__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem in iste,
-									autem neque provident sapiente placeat dolores deleniti. Quam odio, maxime vitae dolor
-									voluptate voluptatum blanditiis error incidunt velit illum?</p>
-								<p class="news__date">05.10.2021</p>
-								<a href="#">
-									<div class="news__button">Details</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-			</div>
+			<h3 class="dev-text">In development</h3>
 		</div>
 
 	</main>
