--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -258,7 +258,7 @@ a {
         }
 
             .left-menu-content li a:hover {
-                color: #0083ab;
+                color: #0083ab !important;
                 font-size: 3vh;
             }
 
@@ -293,6 +293,16 @@ a {
     font-weight: 700;
     font-family: "monsterrat-thin";
 }
+
+.title_link {
+    display: block;
+    color: #31adeb !important;
+    transition: all 0.3s ease 0s !important;
+}
+    .title_link:hover {
+        color: #1752b3 !important;
+        font-weight: 900;
+    }
 
 .current-course {
     display: flex;
@@ -352,31 +362,33 @@ a {
     min-height: 20px;
     width: 500px;
     padding: 20px;
-    border: 1px solid #66a8ff;
-    color: #66a8ff;
     font-size: 2.5vh;
     margin-top: 30px;
     border-radius: 20px;
-    transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s !important;
     margin: 0 auto;
     margin-top: 30px;
     text-align: center;
+    background-color: #66a8ff;
+    color: #fff;
 }
 
     .current-course__button:hover,
-    .course__button:hover {
-        background-color: #66a8ff;
-        color: #fff;
-        border-color: #fff;
+    .course__button:hover,
+    .challenge__button_accept:hover,
+    .challenge__button_create:hover,
+    .news__button:hover {
+        opacity: 0.7;
+        box-shadow: 2px 2px 2px #999;
     }
 
 .courses-container {
     min-height: 300px;
-    padding: 50px 0;
 }
 
 .courses {
     margin-top: 20px;
+    padding-bottom: 30px;
 }
 
 .course {
@@ -385,6 +397,7 @@ a {
     border: 1px solid #66a8ff;
     border-radius: 20px;
     margin: 0 auto;
+    box-shadow: 0px 8px 24px 4px rgba(174, 174, 192, 0.3), 0px 4px 12px 2px rgba(174, 174, 192, 0.3) !important;
 }
 
 .course-content {
@@ -402,10 +415,15 @@ a {
     border-top-right-radius: 20px;
 }
 
+.course__info{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .course__percent {
     width: 150px;
     margin: 0 auto;
-    height: 250px;
+    height: 150px;
 }
 
 .swiper-wrapper{
@@ -417,8 +435,8 @@ a {
     width: auto;
     min-height: 20px;
     padding: 20px;
-    border: 1px solid #66a8ff;
-    color: #66a8ff;
+    background-color: #66a8ff;
+    color: #fff;
     font-size: 2.5vh;
     margin-top: 30px;
     border-radius: 20px;
@@ -508,10 +526,9 @@ a {
     padding: 0;
 }
 
-.challenges-winrate {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.challenge__info{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .winrate__percent {
@@ -535,11 +552,11 @@ a {
         font-family: "monsterrat-normal";
     }
 
-.winrate__info {
-    margin-left: 150px;
+.winrate__info {    
     color: #ff4f4f;
     font-size: 4vh;
     margin-top: 70px;
+    text-align: center;
 }
 
 .challenge {
@@ -547,6 +564,7 @@ a {
     height: auto;
     border-radius: 20px;
     margin: 0 auto;
+    box-shadow: 0px 8px 24px 4px rgba(174, 174, 192, 0.3), 0px 4px 12px 2px rgba(174, 174, 192, 0.3) !important;
 }
 
 .challenges-swiper {
@@ -576,7 +594,8 @@ a {
 }
 
 .challenge-content {
-    padding: 30px;
+    padding: 20px;
+    padding-top: 10px;
 }
 
 .challenges-swiper > .swiper-button-next {
@@ -621,24 +640,14 @@ a {
 }
 
 .challenge__button_accept {
-    color: #fc5858;
-    background-color: #fff;
+    color: #fff;
+    background-color: #fc5858;
 }
-
-    .challenge__button_accept:hover {
-        color: #fff;
-        background-color: #fc5858;
-    }
 
 .challenge__button_create {
-    color: #00ed86;
-    background-color: #fff;
+    color: #fff;
+    background-color: #00ed86;
 }
-
-    .challenge__button_create:hover {
-        color: #fff;
-        background-color: #00ed86;
-    }
 
 .challenge_accept {
     border: 1px solid #ff9494;
@@ -648,6 +657,7 @@ a {
 .achievment-container {
     min-height: 300px;
     padding: 50px 0;
+    margin-top: 10px;
 }
 
 .achievment {
@@ -763,22 +773,17 @@ a {
 }
 
 .news__button {
-    border: 1px solid #7f00de;
     border-radius: 20px;
     padding: 10px;
     width: auto;
     min-height: 30px;
-    color: #530091;
+    background-color: #7f00de;
+    color: #fff;
     transition: all 0.5s ease 0s;
     font-family: "monsterrat-normal";
     font-size: 3vh;
     text-align: center;
 }
-
-    .news__button:hover {
-        color: #fff;
-        background-color: #7f00de;
-    }
 
 @media (max-width: 1362px) {
     .current-course {
@@ -815,10 +820,17 @@ a {
 @media (max-width: 800px) {
     .current-course {
         flex-direction: column;
+        padding: 10px 30px;
     }
 
     .current-course__button {
         width: 350px;
+        margin-top: 10px;
+    }
+
+    .current-course__info{
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .level {
@@ -853,6 +865,16 @@ a {
         margin: 0 auto;
         width: 200px;
     }
+}
+.link_active {
+    color: #17b34b !important;
+}
+
+.dev-text{
+    text-align: center;
+    font-family: "monsterrat-bold";
+    font-size: 5vh;
+    margin-top: 50px;
 }
 
 @media (max-width: 650px) {
