Fixed Profile page 1. Maked font bigger on small devices. Fixed Courses page 1. Changed title color 2. Changed unmatched courses color 3. Added shadow effect to courses cards 4. Changed courses position from justify-content to left 5. Fixed CourseHelper
Fixed Challenges Page
1. Changed buttons to new format

General fixes
1. Changed vh to em in font-size property
2. Added monsterrat font
3. Added footer.css file

--- a/Programmania/Views/Course/Courses.cshtml
+++ b/Programmania/Views/Course/Courses.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE/>
+﻿<!DOCTYPE html/>
 @model IEnumerable<Programmania.ViewModels.UserCourseVM>;
 @using Programmania.HtmlHelpers
 
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
     <link rel="stylesheet" href="~/css/Courses.css" />
+    <link rel="stylesheet" href="~/css/Footer.css" />
 
     <link rel="stylesheet" href="~/css/loading-bar.min.css" />
     <script src="~/js/loading-bar.min.js"></script>
@@ -21,7 +22,6 @@
 </head>
 
 <body>
-
     <header class="header">
         <div class="header-container">
             <div class="container__text">Programmania</div>
