--- a/Programmania/wwwroot/css/Lessons.css
+++ b/Programmania/wwwroot/css/Lessons.css
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header__text{
-    font-size: 5vh;
+    font-size: 3.8em;
     font-weight: 800;
 }
 
@@ -178,7 +178,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .burger-content-elem__text {
-    font-size: 3vh;
+    font-size: 1.8em;
     font-weight: 500;
 }
 
@@ -189,13 +189,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .content__title{
     text-align: center;
-    font-size: 4vh;
+    font-size: 2em;
     font-weight: 500;
 }
 
 .content__text{
     margin-top: 50px;
-    font-size: 2.4vh;
+    font-size: 1.4em;
     line-height: 30px;
     text-align: justify;
 }
@@ -206,7 +206,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .content-tests__question{
     text-align: center;
-    font-size: 4vh;
+    font-size: 1.8em;
 }
 
 .rad-label {
@@ -287,7 +287,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .code{
-    font-size: 2vh !important;
+    font-size: 1.3vh !important;
 }
 
 .button {
@@ -347,13 +347,13 @@ h1, h2, h3, h4, h5, h6 {
 
 @media(max-width: 1200px) {
     .burger-content-elem__text {
-        font-size: 2.5vh;
+        font-size: 1.3em;
     }
 }
 
 @media(max-width: 1000px) {
     .burger-content-elem__text {
-        font-size: 2vh;
+        font-size: 1.1em;
     }
 }
 
